--- a/kubernetes/daf-storage-manager.yml.j2
+++ b/kubernetes/daf-storage-manager.yml.j2
@@ -26,7 +26,7 @@ spec:
     spec:
       containers:
       - name: storage-manager
-        image: nexus.teamdigitale.test/daf-storage-manager:1.0.4-SNAPSHOT
+        image: {{ nexus_servicename }}.{{ env_name }}.{{ env_domain }}/daf-storage-manager:1.0.4-SNAPSHOT
         imagePullPolicy: Always
         env:
         - name: JAVA_OPTS
